# excel-macro-solver

./: .gitignore  ENGINEERING_REVIEW.md  SolveHeadless.bas  TEAM_REVIEW_2026-06-09.md  TROUBLESHOOTING.md  com_worker.py  config.py  dashboard.py  db.py  debug_vba_import.py  diff_report.py  export_checkpoints.py  export_for_review.py  extract_vba.py  import_vba_module.py  isolated_runner.py  macro_runner.py  pyproject.toml  python_solver.py  requirements.txt  run.bat  run_dashboard.bat  run_desktop.ps1  run_portfolio_test.py  run_release_gate.ps1  run_solver.bat  solve_via_macro.py  solve_with_progress.py  test_multiproject.py  validate_parallel.py  vp_bridge.py
.github/workflows/: ci.yml
dn38_solver/: __init__.py  __main__.py  cli.py  config.py  convert.py  types.py
dn38_solver/com/: __init__.py  auto_recovery.py  cleanup.py  com_edit.py  direct_runner.py  hresult.py  launcher.py  parallel_runner.py  status_aggregator.py  vba_contract.py  worker.py
dn38_solver/dashboard/: tracker.py
dn38_solver/merge/: __init__.py
dn38_solver/patches/: __init__.py  pi_row1_toggle.py
dn38_solver/reporting/: __init__.py  diff.py  export_xlsx.py  vp_bridge.py
dn38_solver/shadow/: __init__.py  (+4 more)
docs/: RELEASE_GATES.md  RESOLVED_ISSUES.md
scripts/: __init__.py  analyze_solver_results.py  compare_runs.py  patch_pi_row1_toggle.py
tests/: test_atomic_write.py  test_auto_recovery.py  test_direct_runner_resilience.py  test_excel_regression.py  test_hresult.py  test_post_merge.py  test_preflight.py  test_release_gates.py  test_vba_contract_parity.py  test_watchdog_and_status.py
(+9 files in other folders)
